--- a/index.html
+++ b/index.html
@@ -140,5 +140,9 @@
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <!--
+    CODIGO VERIFICADO Y TERMINADO, VERSION 1.0.0 LISTA
+    -->
+
 </body>
 </html>
