--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="seccion-imagen">
             <div class="texto-encima">
                 <h1>ENCUENTRA EL CAFÉ PARA TI</h1>
-                <p>Starbucks® llega a tu depa</p>
+                <p>Starbucks® llega a tu casa</p>
                 <h3 class="subtitulo">Disfruta el café de Starbucks® que más te guste, ahora desde casa.</h3>
             </div>
             <div class="imagen-fondo">
@@ -108,7 +108,7 @@
                 <div class="img-card"><img src="img/img-10.jpg" alt="Cada taza, una aventura por descubrir." /></div>
                 <div class="img-card"><img src="img/img-11.jpg" alt="Café caliente, corazón cálido." /></div>
                 <div class="img-card"><img src="img/img-12.jpg" alt="Cada café, una historia por contar." /></div>
-            
+            </div>
 
             <!-- Modal -->
             <div class="modal">
