--- a/ALIMENTOS.html
+++ b/ALIMENTOS.html
@@ -79,7 +79,7 @@
                 <h3 class="product-title">Muffin de Naranja</h3>
                 <p class="product-description">Muffin realizado con harina de trigo, aceite vegetal, huevos, jugo de naranja, ralladura de naranja, cobertura bitter, margarina, azucar, escencia de vainilla y naranja. Porción individual.</p>
                 <p class="product-price">S/ 9.00</p>
-                
+                </p>
                 <div class="product-actions">
                     <button class="btnA btn-info">Más Información</button>
                 </div>
@@ -284,7 +284,7 @@
 
   <!-- Scripts JS -->
   <script src="assets/JavaScript/scriptMENU.js"></script>
-  
+  <script src="assets/JavaScript/footer.js"></script>
   <script src="assets/JavaScript/menu.js"></script>
   <script src="assets/JavaScript/script.js"></script>
 
