--- a/bebidas.html
+++ b/bebidas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Starbucks  - Bebidas </title>
+  <title>Starbucks  - Bebidas</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
@@ -213,7 +213,7 @@
 
   <!-- Scripts JS -->
   <script src="assets/JavaScript/scriptMENU.js"></script>
-  
+  <script src="assets/JavaScript/footer.js"></script>
   <script src="assets/JavaScript/menu.js"></script>
   <script src="assets/JavaScript/script.js"></script>
 
