--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="seccion-imagen">
             <div class="texto-encima">
                 <h1>ENCUENTRA EL CAFÉ PARA TI</h1>
-                <p>Starbucks® llega a tu aaaaa</p>
+                <p>Starbucks® llega a tu casa</p>
                 <h3 class="subtitulo">Disfruta el café de Starbucks® que más te guste, ahora desde casa.</h3>
             </div>
             <div class="imagen-fondo">
@@ -113,7 +113,7 @@
             <!-- Modal -->
             <div class="modal">
                 <span id="closeModal"><i class="fas fa-times"></i></span>
-                
+                <img id="imgModal" src="" alt="" />
                 <p id="caption"></p>
             </div>
         </section>
